--- a/sssv.eu.yaml
+++ b/sssv.eu.yaml
@@ -11,6 +11,12 @@ options:
     #include "common.h"
   src_path: src.eu
   extensions_path: tools/splat_ext
+  enable_ld_alignment_hack: yes
+  lib_path: build/lib
+  hi_lo_max_distance: 32
+  migrate_rodata_to_functions: no
+  # workaround regex issue
+  create_undefined_funcs_auto: no
 segments:
   - name:  header
     type:  header
@@ -33,6 +39,8 @@ segments:
     - [0x4910, c, main_4910]
     - [0x4A00, c, main_4A00]
     - [0x51D0, c, main_51D0]
+    - [0x5210, c, thread6] # extra 0x20 here
+    - [0x5F90, c, tv]
     - [0x6810, c, core/rnc]
     - [0x7790, c, main_7790]
     - [0x78B0, c, main_78B0]
@@ -42,11 +50,13 @@ segments:
     - [0xC350, c, core/eeprom]
     - [0xC790, c, main_C770]
     - [0xC9B0, c, core/audio]
+    # extra split here in US but maybe wrong?
     - [0xF620, c, libultra/audio/csplayer]
     - [0x10CD0, c, main_10CD0]
     - [0x10DE0, c, main_10DE0]
-    - [0x12400, c, main_12400]
+    - [0x12400, c, main_12400]  # .text is 0x40 larger
     # libultra
+    - [0x12FE0, linker, lib]  # fake split here for progress
     - [0x12FE0, asm]
     - [0x13270, asm]
     - [0x13540, asm]
@@ -172,39 +182,72 @@ segments:
   # .data/.rodata
     - [0x28AB0, linker, data]
     - [0x28AB0, bin]
-  - [0x398F0, bin]   # in-game objects?
-  - [0x7F7B0, bin]   # Dan Danger#
-  - [0x857B0, bin]
-  - [0x87BA0, bin]
-  - [0x89280, bin]   # Intro sequence
-  - [0x92C10, bin]
-  - [0x967B0, bin]
-  - [0x97040, bin]
-  - [0x9E0F0, bin]
-  - [0x9ED30, bin]
-  - [0xA0E60, bin]
-  - [0xA10F0, bin]
-  - [0xAA960, bin]
-  - [0xB04B0, bin]
-  - [0xB0BB0, bin]
-  - [0xB2EF0, bin]
-  - [0xB3DF0, bin]
-  - [0xB40F0, bin]
-  - [0xB43C0, bin]
-  - [0xB48E0, bin]
-  - [0xBD0F0, bin]
-  - [0xBD2D0, bin]
-  - [0xBFC60, bin]
-  - [0xC4530, bin]
-  - [0xC47D0, bin]
-  - [0xC7A50, bin]
-  - [0xDD5E0, bin] # ice
-  - [0xE75D0, bin] # desert
-  - [0xF1080, bin] # jungle
-  - [0xFFD70, bin] # city
+  - name: segment1 # in-game objects?
+    type: code
+    vram: 0x01000000
+    start: 0x398F0      # still 0x20 ahead of US
+    overlay: yes
+    subalign: 8
+    subsegments:
+    - [0x398F0, bin]   # in-game objects?
+  - name: data_7F7B0 # Dan Danger
+    type: code
+    vram: 0x05000000
+    start: 0x7F7B0      # still 0x20 ahead of US
+    subalign: 8
+    overlay: yes
+    subsegments:
+    - [0x7F7B0, bin]    # Dan Danger#
+  - [0x857B0, bin]      # HAVE_A_NICE_DAY
+  - [0x87BA0, bin]      # HONEYMOON_LAGOON
+  - [0x89280, bin]      # SMASHING_START
+  - [0x92C10, bin]      # THE_BATTERY_FARM
+  - [0x967B0, bin]      # GIVE_A_DOG_A_BONUS
+  - [0x97040, bin]      # DMA_INTRO
+  - [0x9E0F0, bin]      # STINKY_SEWERS
+  - [0x9ED30, bin]      # RAT_O_MATIC
+  - [0xA0E60, bin]      # ROCKY_HARD_PLACE
+  - [0xA10E0, bin]      # tbd
+  - [0xA10F0, bin]      # BIG_CELEBRATION_PARADE (tbd)
+  - [0xAA960, bin]      # SOMETHING_FISHY
+  - [0xB04B0, bin]      # HOPPA_CHOPPA
+  - [0xB0BB0, bin]      # PENGUIN_PLAYPEN
+  - [0xB2EF0, bin]      # WALRACE_64
+  - [0xb3d90, bin]      # tbd
+  - [0xb3da0, bin]      # tbd
+  - [0xb3db0, bin]      # tbd
+  - [0xb3dc0, bin]      # tbd
+  - [0xb3dd0, bin]      # tbd
+  - [0xb3de0, bin]      # tbd
+  - [0xB3DF0, bin]      # WEIGHT_FOR_IT
+  - [0xb40e0, bin]      # tbd
+  - [0xB40F0, bin]      # JUNGLE_JUMPS
+  - [0xB43C0, bin]      # JUNGLE_JAPES
+  - [0xB48E0, bin]      # tbd
+  - [0xB48F0, bin]      # EVOS_ESCAPE
+  - [0xBD0b0, bin]      # tbd
+  - [0xBD0c0, bin]      # tbd
+  - [0xBD0d0, bin]      # tbd
+  - [0xBD0e0, bin]      # tbd
+  - [0xBD0F0, bin]      # tbd
+  - [0xBD2D0, bin]      # HOT_CROSS_BUNS
+  - [0xBFC60, bin]      # PUNCHUP_PYRAMID
+  - [0xC4520, bin]      # tbd
+  - [0xC4530, bin]      # tbd
+  - [0xC47C0, bin]      # tbd
+  - [0xC47D0, bin]      # tbd
+  - [0xC7A20, bin]      # tbd
+  - [0xC7A30, bin]      # tbd
+  - [0xC7A40, bin]      # tbd
+  - [0xC7A50, bin] # europe_biome
+  - [0xDD5E0, bin] # ice_biome
+  - [0xE75D0, bin] # desert_biome
+  - [0xF1080, bin] # jungle_biome
+  - [0xFFD70, bin] # city_biome
   # menu data
-  - [0x116BF0, bin, rnc_116BF0] # 1577 => 2048
-  - [0x117220, bin] # unknown!
+  - [0x116BF0, bin, rnc, img/menu/powercell, rgba16, 32, 32]
+  # spaceship interior textures
+  - [0x117220, bin] # img + vtx
   - [0x11DA10, bin, rnc_11DA10] # 147 => 4096
   - [0x11DAB0, bin, rnc_11DAB0] # 2105 => 3698
   - [0x11E2F0, bin, rnc_11E2F0] # 153 => 560
@@ -225,7 +268,9 @@ segments:
   - [0x129DA0, bin, rnc_129DA0] # 517 => 2048
   - [0x129FB0, bin, rnc_129FB0] # 438 => 2048
   - [0x12A170, bin, rnc_12A170] # 565 => 2048
-  - [0x12A3B0, bin, rnc_12A3B0] # 19014 => 51200 # fonts, different to US
+  # fonts
+  - [0x12A3B0, rnc, img/fonts/comic_sans, i4, 16, 6400] # 19014 => 51200 # different to US? extra 0x20 here
+  # sounds
   - [0x12EE00, bin] # "B1" ...
   - [0x13618C, bin] # tbd?
   - [0x13658C, bin] # tbd?
@@ -239,12 +284,14 @@ segments:
   - [0x445830, bin, rnc_445830] # 36755 => 57624
   - [0x44E7D0, bin, empty_rnc_44E7D0] # empty RNC file
   - [0x44E7F0, bin, rnc_44E7F0] # 35312 => 54880
+  # ia16 textures?
   - [0x4571E0, bin, rnc_4571E0] # 9193 => 21952
   - [0x4595D0, bin, rnc_4595D0] # 16318 => 21952
   - [0x45D590, bin, rnc_45D590] # 6246 => 21952
   - [0x45EE00, bin, rnc_45EE00] # 11068 => 21952
   - [0x461940, bin, rnc_461940] # 79 => 21952
   - [0x461990, bin, rnc_461990] # 193 => 21952
+  # more textures (mipmap), level specific?
   - [0x461A60, bin, rnc_461A60] # 17776 => 32928
   - [0x465FD0, bin, rnc_465FD0] # 23197 => 32928
   - [0x46BA70, bin, rnc_46BA70] # 19507 => 32928
@@ -266,6 +313,7 @@ segments:
   - [0x4B34A0, bin, rnc_4B34A0] # 17728 => 32928
   - [0x4B79E0, bin, empty_rnc_4B79E0] # empty RNC file
   - [0x4B7A00, bin, empty_rnc_4B7A00] # empty RNC file
+  # desert
   - [0x4B7A20, bin, rnc_4B7A20] # 18763 => 30184
   - [0x4BC370, bin, rnc_4BC370] # 20355 => 32928
   - [0x4C1300, bin, rnc_4C1300] # 14853 => 32928
@@ -286,10 +334,12 @@ segments:
   - [0x4F54B0, bin, empty_rnc_4F54B0] # empty RNC file
   - [0x4F54D0, bin, empty_rnc_4F54D0] # empty RNC file
   - [0x4F54F0, bin, empty_rnc_4F54F0] # empty RNC file
+  # 3xRGBA16 (32x32) + 5xRGBA16 (32x32) + 8x IA4 (32x32) mask
   - [0x4F5510, bin, rnc_4F5510] # 5534 => 20480
   - [0x4F6AB0, bin, rnc_4F6AB0] # 5534 => 20480
   - [0x4F8050, bin, rnc_4F8050] # 5534 => 20480
   - [0x4F95F0, bin, rnc_4F95F0] # 6590 => 20480
+  # 4xRGBA16 (32x32) + 4xIA4 (32x32) mask
   - [0x4FAFB0, bin, rnc_4FAFB0] # 4505 => 10240
   - [0x4FC150, bin, rnc_4FC150] # 4291 => 10240
   - [0x4FD220, bin, rnc_4FD220] # 3462 => 10240
@@ -403,43 +453,43 @@ segments:
   #
   - [0x544A00, bin] # I4 water texture?
   - [0x546C00, bin] # tbd
-  # game levels (nested RNC compressed) (differ to US)
-  - [0x546D40, bin, rnc_546D40] # 33910 => 33872
-  - [0x54F1C0, bin, rnc_54F1C0] # 24023 => 24072
-  - [0x554FA0, bin, rnc_554FA0] # 22081 => 22075
-  - [0x55A5F0, bin, rnc_55A5F0] # 24665 => 24699
-  - [0x560650, bin, rnc_560650] # 31902 => 31954
-  - [0x5682F0, bin, rnc_5682F0] # 20057 => 20085
-  - [0x56D150, bin, rnc_56D150] # 24681 => 24685
-  - [0x5731C0, bin, rnc_5731C0] # 24725 => 24852
-  - [0x579260, bin, rnc_579260] # 25892 => 25884
-  - [0x57F790, bin, rnc_57F790] # 15177 => 15302
-  - [0x5832E0, bin, rnc_5832E0] # 24819 => 24815
-  - [0x5893E0, bin, rnc_5893E0] # 18336 => 18357
-  - [0x58DB80, bin, rnc_58DB80] # 17843 => 17881
-  - [0x592140, bin, rnc_592140] # 20872 => 20894
-  - [0x5972D0, bin, rnc_5972D0] # 43107 => 43046
-  - [0x5A1B40, bin, rnc_5A1B40] # 28054 => 28125
-  - [0x5A88E0, bin, rnc_5A88E0] # 25878 => 25860
-  - [0x5AEE00, bin, rnc_5AEE00] # 25442 => 25453
-  - [0x5B5170, bin, rnc_5B5170] # 25355 => 25352
-  - [0x5BB480, bin, rnc_5BB480] # 36083 => 36049
-  - [0x5C4180, bin, rnc_5C4180] # 23002 => 22991
-  - [0x5C9B60, bin, rnc_5C9B60] # 31426 => 31422
-  - [0x5D1630, bin, rnc_5D1630] # 30870 => 30899
-  - [0x5D8ED0, bin, rnc_5D8ED0] # 31552 => 31561
-  - [0x5E0A10, bin, rnc_5E0A10] # 20844 => 20852
-  - [0x5E5B80, bin, rnc_5E5B80] # 26684 => 26691
-  - [0x5EC3C0, bin, rnc_5EC3C0] # 30645 => 30642
-  - [0x5F3B80, bin, rnc_5F3B80] # 27807 => 27813
-  - [0x5FA820, bin, rnc_5FA820] # 40599 => 40595
-  - [0x6046C0, bin, rnc_6046C0] # 17104 => 17128
-  - [0x608990, bin, rnc_608990] # 30096 => 30106
+  # game levels (nested RNC compressed) (differ to US) (still 0x40 ahead)
+  - [0x546D40, bin, levels/SMASHING_START] # 33910 => 33872
+  - [0x54F1C0, bin, levels/HAVE_A_NICE_DAY] # 24023 => 24072
+  - [0x554FA0, bin, levels/HONEYMOON_LAGOON] # 22081 => 22075
+  - [0x55A5F0, bin, levels/THE_BATTERY_FARM] # 24665 => 24699
+  - [0x560650, bin, levels/THE_ENGINE_ROOM] # 31902 => 31954
+  - [0x5682F0, bin, levels/FAT_BEAR_MOUNTAIN] # 20057 => 20085
+  - [0x56D150, bin, levels/ROCKY_HARD_PLACE] # 24681 => 24685
+  - [0x5731C0, bin, levels/STINKY_SEWERS] # 24725 => 24852
+  - [0x579260, bin, levels/RAT_O_MATIC] # 25892 => 25884
+  - [0x57F790, bin, levels/GIVE_A_DOG_A_BONUS] # 15177 => 15302
+  - [0x5832E0, bin, levels/SNOW_JOKE] # 24819 => 24815
+  - [0x5893E0, bin, levels/ICE_N_EASY_DOES_IT] # 18336 => 18357
+  - [0x58DB80, bin, levels/PENGUIN_PLAYPEN] # 17843 => 17881
+  - [0x592140, bin, levels/PINBALL_BLIZZARD] # 20872 => 20894
+  - [0x5972D0, bin, levels/HOPPA_CHOPPA] # 43107 => 43046
+  - [0x5A1B40, bin, levels/SOMETHING_FISHY] # 28054 => 28125
+  - [0x5A88E0, bin, levels/WALRACE_64] # 25878 => 25860
+  - [0x5AEE00, bin, levels/JUNGLE_JAPES] # 25442 => 25453
+  - [0x5B5170, bin, levels/JUNGLE_DOLDRUMS] # 25355 => 25352
+  - [0x5BB480, bin, levels/SWAMP_OF_ETERNAL_STENCH] # 36083 => 36049
+  - [0x5C4180, bin, levels/WEIGHT_FOR_IT] # 23002 => 22991
+  - [0x5C9B60, bin, levels/JUNGLE_JUMPS] # 31426 => 31422
+  - [0x5D1630, bin, levels/EVOS_ESCAPE] # 30870 => 30899
+  - [0x5D8ED0, bin, levels/FUN_IN_THE_SUN] # 31552 => 31561
+  - [0x5E0A10, bin, levels/HOT_CROSS_BUNS] # 20844 => 20852
+  - [0x5E5B80, bin, levels/STING_IN_THE_TAIL] # 26684 => 26691
+  - [0x5EC3C0, bin, levels/BORASSIC_PARK] # 30645 => 30642
+  - [0x5F3B80, bin, levels/WHIRLWIND_TOUR] # 27807 => 27813
+  - [0x5FA820, bin, levels/SHIFTING_SANDS] # 40599 => 40595
+  - [0x6046C0, bin, levels/PUNCHUP_PYRAMID] # 17104 => 17128
+  - [0x608990, bin, levels/BIG_CELEBRATION_PARADE] # 30096 => 30106
   - [0x60FF20, bin, rnc_60FF20] # 5980 => 6072
   - [0x611680, bin, rnc_611680] # 1399 => 1587
   - [0x611C00, bin, rnc_611C00] # 1494 => 1684
   - [0x6121E0, bin, rnc_6121E0] # 25247 => 25298
-  - [0x618480, bin, rnc_618480] # 4183 => 4305
+  - [0x618480, bin, levels/INTRO] # 4183 => 4305
   # 0x18B0 ahead of US ROM
   - [0x6194E0, rnc, lang/lang1.dat] # 10338 => 31544
   - [0x61BD50, rnc, lang/lang2.dat] # 4981 => 14344
@@ -482,38 +532,42 @@ segments:
   - type:  code
     name:  overlay1
     overlay: yes
-    start: 0x00639DA0
-    vram:  0x80294E50
+    start: 0x00639DA0  # 0x18b0 ahead of US
+    vram:  0x80294E70
     subsegments:
-    - [0x639DA0, asm, overlay1_639DA0]
-    - [0x63ED30, asm, overlay1_63ED30]
-    - [0x63F1A0, asm, overlay1_63F1A0]
-  - [0x63FB60, bin]
-  - [0x6409B0, bin, rnc_6409B0] # 37463 => 163840
-  - [0x649C10, rnc, img/intro/president_frank_bloke, rgba16, 320, 240]
-  - [0x650BE0, rnc, img/sssv_logo, rgba16, 256, 128]
-  - [0x656000, bin, rnc_656000] # 5873 => 18432
-  - [0x657700, bin, rnc_657700] # 5717 => 18432
-  - [0x658D60, bin, rnc_658D60] # 5713 => 18432
-  - [0x65A3C0, bin, rnc_65A3C0] # 6413 => 18432
-  - [0x65BCD0, bin] # unknown!
-  - [0x65C8D0, bin, rnc_65C8D0] # 24460 => 163840
-  - [0x662860, rnc, img/space_background, rgba16, 160, 128] # 11570 => 40960
-  - [0x6655A0, bin] # unknown!
-  - [0x6675F0, bin, rnc_6675F0] # 23248 => 163840
-  - [0x66D0C0, rnc, img/intro/heroes_for_hire, rgba16, 32, 2560]
-  - [0x676520, rnc, img/intro/professor_cheese, rgba16, 320, 240]
-  - [0x680D30, rnc, img/intro/space_station, rgba16, 320, 240]
-  - [0x693D70, bin] # unknown!
-  - [0x69B0D0, bin, rnc_69B0D0] # 35955 => 153600
-  - [0x6A3D50, bin] #  end of RNC
+    - [0x639DA0, c, overlay1_639DA0]
+    - [0x63ED30, c, overlay1_63ED30]
+    - [0x63F1A0, c, overlay1_63F1A0]
+    - [0x63FB60, linker, data]
+    - [0x63FB60, bin]
+    - [0x6409B0, bin, rnc_6409B0] # 37463 => 163840
+    - [0x649C10, rnc, img/intro/president_frank_bloke, rgba16, 320, 240]
+    - [0x650BE0, rnc, img/sssv_logo, rgba16, 256, 128]
+    - [0x656000, bin, rnc_656000] # 5873 => 18432
+    - [0x657700, bin, rnc_657700] # 5717 => 18432
+    - [0x658D60, bin, rnc_658D60] # 5713 => 18432
+    - [0x65A3C0, bin, rnc_65A3C0] # 6413 => 18432
+    - [0x65BCD0, bin] # unknown!
+    - [0x65C8D0, bin, rnc_65C8D0] # 24460 => 163840
+    - [0x662860, rnc, img/space_background, rgba16, 160, 128] # 11570 => 40960
+    - [0x6655A0, rgba16, img/intro/200_credz.rgba16, 32, 128]
+    - [0x6675A0, bin] # unknown!
+    - [0x6675F0, bin, rnc_6675F0] # 23248 => 163840
+    - [0x66D0C0, rnc, img/intro/heroes_for_hire, rgba16, 32, 2560]
+    - [0x676520, rnc, img/intro/professor_cheese, rgba16, 320, 240]
+    - [0x680D30, rnc, img/intro/space_station, rgba16, 320, 240]
+    - [0x693D70, bin] # spaceship
+    - [0x69B0D0, bin, rnc_69B0D0] # 35955 => 153600
+    - [0x6A3D50, bin] #  end of RNC
+    - [0x6A9230, rodata, overlay1_63F1A0]
   - type: code
     name: overlay2 # sssv game code
     overlay: yes
-    start: 0x006A9290
-    vram:  0x80294E50
+    start: 0x006A9290 # section is 0x10 larger than us
+    vram:  0x80294E70
+    subalign: 4
     subsegments:
-    - [0x6A9290, asm]
+    - [0x6A9290, c, overlay2_6A9290]
     - [0x6AA810, asm]
     - [0x6ADE20, asm]
     - [0x6AF0F0, asm]
@@ -608,6 +662,9 @@ segments:
     - [0x7ACA80, asm]
     - [0x7B21B0, asm]
     # .data/.rodata
+    - [0x7B4930, linker, data]
     - [0x7B4930, bin]
+    - [0x7BC978, bin] # in-game objects
+    - [0x7C5FFC, bin] # end of in-game objects
   - [0x7DF890, bin, trailer] # 0xff to end
   - [0x800000]
