--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -17,6 +17,7 @@ options:
   migrate_rodata_to_functions: no
   # workaround regex issue
   create_undefined_funcs_auto: no
+  symbol_name_format: $VRAM_$ROM
 segments:
   - name:  header
     type:  header
@@ -28,8 +29,8 @@ segments:
     type:  code
     start: 0x00001000
     vram:  0x80125900
+    symbol_name_format: $VRAM
     subalign: 8
-    overlay: no
     subsegments:
     - [0x1000, asm, entrypoint]                     # handwritten
     - [0x1050, c, main_1050]                        # -O1
@@ -345,7 +346,7 @@ segments:
     type: code
     vram: 0x01000000
     start: 0x398D0
-    overlay: yes
+    exclusive_ram_id: ovl_01
     subalign: 8
     subsegments:
     - [0x398D0, bin] # CI4 textures
@@ -861,7 +862,7 @@ segments:
     vram: 0x05000000
     start: 0x7F790
     subalign: 8
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0x7F790, sssv_vtx, data/inc/D_05000000_7F790]
     - [0x7F910, .data, data/D_5000180_7F910]
@@ -916,7 +917,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0x85790
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0x85790, rgba16, img/levels/HAVE_A_NICE_DAY/roof_tile.rgba16, 32, 32]
     - [0x85F90, rgba16, img/levels/HAVE_A_NICE_DAY/floorboard.rgba16, 32, 32]
@@ -937,7 +938,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0x87B80
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0x87B80, sssv_vtx, data/inc/D_05000000_87B80]
     - [0x87C00, sssv_vtx, data/inc/D_05000080_87C00]
@@ -962,7 +963,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0x89260
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0x89260, rgba16, img/intro/D_05000000_89260.rgba16, 32, 32]
     - [0x89A60, sssv_vtx, data/inc/D_05000800_89A60]
@@ -1041,7 +1042,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0x92BF0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0x92BF0, rgba16, img/levels/THE_BATTERY_FARM/roof_tile.D_05000000_92BF0.rgba16, 32, 32]
     - [0x933F0, rgba16, img/levels/THE_BATTERY_FARM/floorboard.D_05000800_933F0.rgba16, 32, 32]
@@ -1078,7 +1079,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0x96790
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0x96790, sssv_vtx, data/inc/D_05000000_96790]
     - [0x96970, sssv_vtx, data/inc/D_050001E0_96970]
@@ -1089,7 +1090,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0x97020
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subalign: 8
     subsegments:
     - [0x97020, .data, data/DMA_INTRO_D.D_05000880_978A0]
@@ -1150,7 +1151,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0x9E0D0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0x9E0D0, sssv_vtx, data/inc/D_05000000_9E0D0]
     - [0x9E150, sssv_vtx, data/inc/D_05000080_9E150]
@@ -1168,7 +1169,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0x9ED10
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0x9ED10, .data, data/D_05000530_9F240]
     - [0x9ED10, sssv_vtx, data/inc/D_05000000_9ED10]
@@ -1204,7 +1205,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xA0E40
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xA0E40, sssv_vtx, data/inc/D_05000000_A0E40]
     - [0xA0EC0, sssv_vtx, data/inc/D_05000080_A0EC0]
@@ -1213,14 +1214,14 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xA10C0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xA10C0, .rodata, data/D_05000000_A10C0]
   - name: BIG_CELEBRATION_PARADE # tbd
     type: code
     vram: 0x05000000
     start: 0xA10D0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xA10D0, sssv_vtx, data/inc/D_05000000_A10D0]
     - [0xA1150, sssv_vtx, data/inc/D_05000080_A1150]
@@ -1298,7 +1299,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xAA940
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xAA940, sssv_vtx, data/inc/D_05000000_AA940]
     - [0xAAB30, sssv_vtx, data/inc/D_050001F0_AAB30]
@@ -1363,7 +1364,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xB0490
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB0490, sssv_vtx, data/inc/D_05000000_B0490]
     - [0xB04C0, sssv_vtx, data/inc/D_05000030_B04C0]
@@ -1374,7 +1375,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xB0B90
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB0B90, sssv_vtx, data/inc/D_05000000_B0B90]
     - [0xB0D90, sssv_vtx, data/inc/D_05000200_B0D90]
@@ -1400,7 +1401,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xB2ED0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB2ED0, sssv_vtx, data/inc/D_05000000_B2ED0]
     - [0xB30C0, sssv_vtx, data/inc/D_050001F0_B30C0]
@@ -1422,49 +1423,49 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xB3D70
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB3D70, .rodata, data/D_05000000_B3D70]
   - name: data_B3D80
     type: code
     vram: 0x05000000
     start: 0xB3D80
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB3D80, .rodata, data/D_05000000_B3D80]
   - name: data_B3D90
     type: code
     vram: 0x05000000
     start: 0xB3D90
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB3D90, .rodata, data/D_05000000_B3D90]
   - name: data_B3DA0
     type: code
     vram: 0x05000000
     start: 0xB3DA0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB3DA0, .rodata, data/D_05000000_B3DA0]
   - name: data_B3DB0
     type: code
     vram: 0x05000000
     start: 0xB3DB0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB3DB0, .rodata, data/D_05000000_B3DB0]
   - name: data_B3DC0
     type: code
     vram: 0x05000000
     start: 0xB3DC0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB3DC0, .rodata, data/D_05000000_B3DC0]
   - name: WEIGHT_FOR_IT
     type: code
     vram: 0x05000000
     start: 0xB3DD0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB3DD0, sssv_vtx, data/inc/D_05000000_B3DD0]
     - [0xB3FD0, sssv_vtx, data/inc/D_05000200_B3FD0]
@@ -1473,14 +1474,14 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xB40C0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB40C0, .rodata, data/D_05000000_B40C0]
   - name: JUNGLE_JUMPS # ?
     type: code
     vram: 0x05000000
     start: 0xB40D0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB40D0, sssv_vtx, data/inc/D_05000000_B40D0]
     - [0xB4150, sssv_vtx, data/inc/D_05000080_B4150]
@@ -1489,7 +1490,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xB43A0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB43A0, sssv_vtx, data/inc/D_05000000_B43A0]
     - [0xB4590, sssv_vtx, data/inc/D_050001F0_B4590]
@@ -1499,14 +1500,14 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xB48C0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB48C0, .rodata, data/D_05000000_B48C0]
   - name: EVOS_ESCAPE
     type: code
     vram: 0x05000000
     start: 0xB48D0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xB48D0, sssv_vtx, data/inc/D_05000000_B48D0]
     - [0xB4930, sssv_vtx, data/inc/D_05000060_B4930]
@@ -1584,35 +1585,35 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xBD090
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xBD090, .rodata, data/D_05000000_BD090]
   - name: data_BD0A0
     type: code
     vram: 0x05000000
     start: 0xBD0A0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xBD0A0, .rodata, data/D_05000000_BD0A0]
   - name: data_BD0B0
     type: code
     vram: 0x05000000
     start: 0xBD0B0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xBD0B0, .rodata, data/D_05000000_BD0B0]
   - name: data_BD0C0
     type: code
     vram: 0x05000000
     start: 0xBD0C0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xBD0C0, .rodata, data/D_05000000_BD0C0]
   - name: data_BD0D0
     type: code
     vram: 0x05000000
     start: 0xBD0D0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subalign: 8
     subsegments:
     - [0xBD0D0, sssv_vtx, data/inc/D_05000000_BD0D0]
@@ -1623,7 +1624,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xBD2B0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xBD2B0, sssv_vtx, data/inc/D_05000000_BD2B0]
     - [0xBD420, sssv_vtx, data/inc/D_05000170_BD420]
@@ -1655,7 +1656,7 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xBFC40
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xBFC40, sssv_vtx, data/inc/D_05000000_BFC40]
     - [0xBFE40, sssv_vtx, data/inc/D_05000200_BFE40]
@@ -1699,14 +1700,14 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xC4500
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xC4500, .rodata, data/D_05000000_C4500]
   - name: data_C4510
     type: code
     vram: 0x05000000
     start: 0xC4510
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xC4510, sssv_vtx, data/inc/D_05000000_C4510]
     - [0xC4590, sssv_vtx, data/inc/D_05000080_C4590]
@@ -1715,14 +1716,14 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xC47A0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xC47A0, .rodata, data/D_05000000_C47A0]
   - name: data_C47B0
     type: code
     vram: 0x05000000
     start: 0xC47B0
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subalign: 8
     subsegments:
     - [0xC47B0, sssv_vtx, data/inc/D_05000000_C47B0]
@@ -1760,28 +1761,28 @@ segments:
     type: code
     vram: 0x05000000
     start: 0xC7A00
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xC7A00, .rodata, data/D_05000000_C7A00]
   - name: data_C7A10
     type: code
     vram: 0x05000000
     start: 0xC7A10
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xC7A10, .rodata, data/D_05000000_C7A10]
   - name: data_C7A20
     type: code
     vram: 0x05000000
     start: 0xC7A20
-    overlay: yes
+    exclusive_ram_id: ovl_05
     subsegments:
     - [0xC7A20, .rodata, data/D_05000000_C7A20]
   - name: europe_biome
     type: code
     vram: 0x04000000
     start: 0xC7A30
-    overlay: yes
+    exclusive_ram_id: ovl_04
     subalign: 8
     subsegments:
     - [0xC7A30, sssv_vtx, data/inc/D_04000000_C7A30]
@@ -2104,7 +2105,7 @@ segments:
     type: code
     vram: 0x04000000
     start: 0xDD5C0
-    overlay: yes
+    exclusive_ram_id: ovl_04
     subalign: 8
     subsegments:
     - [0xDD5C0, sssv_vtx, data/inc/D_04000000_DD5C0]
@@ -2335,7 +2336,7 @@ segments:
     type: code
     vram: 0x04000000
     start: 0xE75B0
-    overlay: yes
+    exclusive_ram_id: ovl_04
     subalign: 8
     subsegments:
     - [0xE75B0, sssv_vtx, data/inc/D_04000000_E75B0]
@@ -2530,7 +2531,7 @@ segments:
     type: code
     vram: 0x04000000
     start: 0xF1060
-    overlay: yes
+    exclusive_ram_id: ovl_04
     subalign: 8
     subsegments:
     - [0xF1060, sssv_vtx, data/inc/D_04000000_F1060]
@@ -2804,7 +2805,7 @@ segments:
     type: code
     vram: 0x04000000
     start: 0xFFD50
-    overlay: yes
+    exclusive_ram_id: ovl_04
     subalign: 8
     subsegments:
     - [0x0FFD50, sssv_vtx, data/inc/D_04000000_FFD50]
@@ -3101,7 +3102,7 @@ segments:
     type: code
     vram: 0x04000000
     start: 0x116BD0
-    overlay: yes
+    exclusive_ram_id: ovl_04
     subalign: 8
     subsegments:
     - [0x116BD0, rnc, img/menu/powercell, rgba16, 32, 32]
@@ -3519,12 +3520,13 @@ segments:
   - [0x637160, bin, rnc_637160] # 5000 => 115024 # 28 * 0x100C particles?
   - type:  code
     name:  overlay1
-    overlay: yes
+    vram: 0x80294E50
     start: 0x006384F0
-    vram:  0x80294E50
+    exclusive_ram_id: ovl_80
     subalign: 8
     subsegments:
     - [0x6384F0, c, overlay1_6384F0]
+    - [0x63C310, c, overlay1_63C310]
     - [0x63C660, c, overlay1_63C660]
     # .data / .rodata
     - [0x63CDD0, linker, data]
@@ -3624,15 +3626,15 @@ segments:
     # rodata
     - [0x6A63C0, .rodata, overlay1_6384F0]
     - [0x6A63D0, rodata, overlay1_6384F0]
-    - [0x6A64A0, rodata, overlay1_63C660]
+    - [0x6A64A0, .rodata, overlay1_63C660]
     # bss
     - [0x6A6500, .bss, overlay1_6384F0] # , 0xAD740 // should be D_80302E60
     - [0x6A6500, .bss, overlay1_63C660]
   - type: code
     name: overlay2 # sssv game code
-    overlay: yes
+    vram: 0x80294E50
     start: 0x006A6500
-    vram:  0x80294E50
+    exclusive_ram_id: ovl_80
     subalign: 4 # for incomplete rodata
     subsegments:
     - [0x6A6500, c, overlay2_6A6500]
@@ -3783,7 +3785,7 @@ segments:
     - [0x7B99F0, bin] # overlay2_725D10 data?
     - [0x7B9BD8, .data, data/objects_7B9BD8] # 0x9C objects x 247  # rodata overlay2_72C680
     - [0x7C325C, bin] # end of objects
-    - [0x7C35D0, .rodata, data/demo_input] # demo controller input
+    - [0x7C35D0, .data, data/demo_input] # demo controller input
     - [0x7C4F10, bin] # end of demo controller input
     - [0x7C5F38, bin] # husky texture 1? 16x16 ci
     - [0x7C5FB8, bin] # husky texture 2?
@@ -3841,6 +3843,7 @@ segments:
     - [0x7CE4B0, .rodata, screen_transition]
     - [0x7CE520, rodata, sssv/animals/lion]
     - [0x7CE530, rodata, overlay2_7041D0]
+    - [0x7CE540, .rodata, overlay2_7041D0]
     - [0x7CE560, rodata, overlay2_7070A0]
     - [0x7CE644, .rodata, overlay2_7070A0] # alignment ok?
     - [0x7CE650, rodata, sssv/animals/rabbit]
@@ -3863,8 +3866,7 @@ segments:
     - [0x7CF090, rodata, overlay2_7312E0]
     - [0x7CF120, rodata, sssv/animals/bear]
     - [0x7CF180, .rodata, overlay2_739290]
-    - [0x7CF530, rodata, overlay2_73D980]
-    - [0x7CF6A8, .rodata, overlay2_73D980]
+    - [0x7CF530, .rodata, overlay2_73D980]
     - [0x7CF800, rodata, overlay2_73E580]
     - [0x7CF810, rodata, overlay2_73ED30]
     - [0x7CF860, rodata, overlay2_741000]
