--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -3756,28 +3756,30 @@ segments:
     - [0x7B4430, bin]
     - [0x7B5E50, bin]
     - [0x7B5E60, bin]
-    - [0x7B5F70, .data, sssv/aidata] # D_803A48C0_7B5F70 europe
-    - [0x7B62E0, bin] # dog
-    - [0x7B65A0, bin] # hippo
-    - [0x7B6780, bin] # lion
-    - [0x7B6A90, bin] # rabbit
-    - [0x7B6BD0, bin] # frog
-    - [0x7B6C10, bin] # overlay2_716900
-    - [0x7B6D60, bin] # parrot
+    - [0x7B5F70, .data, sssv/aidata]
+    - [0x7B62E0, data, sssv/animals/dog]
+    - [0x7B65A0, data, sssv/animals/hippo]
+    - [0x7B6780, data, sssv/animals/lion]
+    - [0x7B6A90, data, sssv/animals/rabbit]
+    - [0x7B6BD0, data, sssv/animals/frog]
+    - [0x7B6C10, data, overlay2_716900] # overlay2_716900
+    - [0x7B6C30, .data, overlay2_716900]
+    - [0x7B6C40, data, overlay2_716900_cont] # overlay2_716900 data continued
+    - [0x7B6D60, data, sssv/animals/parrot]
     - [0x7B6E00, .data, overlay2_72B100]
     - [0x7B6E10, .data, overlay2_72B800]
     - [0x7B6E20, .data, overlay2_72C680]
     - [0x7B73D0, data, sssv/animals/mouse]
     - [0x7B7550, data, sssv/animals/bear]
     - [0x7B7720, data, overlay2_739290] # D_803A6070_7B7720
-    - [0x7B7A60, bin]
+    - [0x7B7A60, bin] # D_803A63B0_7B7A60
     - [0x7B7B20, .data, overlay2_6ED230] # animal sound lookup table?
     - [0x7B7C80, bin] # animal sounds lookup
     - [0x7B7D30, bin] # animal sounds lookup
     - [0x7B7DE0, bin] #
     - [0x7B8370, data]
     - [0x7B83A0, bin]
-    - [0x7b83d0, bin] # something else
+    - [0x7B83D0, bin] # something else
     - [0x7B9580, .data, data/7B9940] # green crib??
     - [0x7B9580, sssv_vtx, data/inc/D_803A7ED0]
     - [0x7B9780, sssv_vtx, data/inc/D_803A80D0]
@@ -3845,7 +3847,7 @@ segments:
     - [0x7CE530, rodata, overlay2_7041D0]
     - [0x7CE540, .rodata, overlay2_7041D0]
     - [0x7CE560, rodata, overlay2_7070A0]
-    - [0x7CE644, .rodata, overlay2_7070A0] # alignment ok?
+    - [0x7CE5B0, .rodata, overlay2_7070A0] # alignment ok?
     - [0x7CE650, rodata, sssv/animals/rabbit]
     - [0x7CE680, rodata, sssv/animals/frog]
     - [0x7CE690, rodata, overlay2_715820]
