--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -3824,7 +3824,7 @@ segments:
     - [0x7CC3B0, rodata, overlay2_6A7A80]
     - [0x7CC3C0, rodata, overlay2_6ACF20]
     - [0x7CC470, rodata, overlay2_6B5380]
-    - [0x7CCBE0, .rodata, overlay2_6B5380]
+    - [0x7CC898, .rodata, overlay2_6B5380]
     - [0x7CD5B0, rodata, sssv/collision]
     - [0x7CD610, .rodata, overlay2_6CCEF0]
     - [0x7CD664, rodata, overlay2_6CCEF0]
@@ -3885,7 +3885,8 @@ segments:
     - [0x7D0220, rodata, overlay2_76D850]
     - [0x7D02B0, rodata, sssv/animals/rat]
     - [0x7D02C0, rodata, overlay2_76F7D0]
-    - [0x7D02D0, rodata, sssv/animals/sheep]
+    - [0x7D02D0, .rodata, sssv/animals/sheep]
+    - [0x7D02F8, rodata, sssv/animals/sheep]
     - [0x7D0310, rodata, overlay2_7741B0]
     - [0x7D033C, .rodata, overlay2_7741B0]
     - [0x7D05B0, rodata, sssv/animals/penguin]
